syntax = "proto3";
package eganow.api;

option go_package = "github.com/eganow/partners/sampler/api;pb";

message Account {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  string created_at = 5;
}